Closed Bug 1779942 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::ClientWebGLContext::UpdateWebRenderCanvasData]

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- fixed
firefox102 --- wontfix
firefox103 --- wontfix
firefox104 --- fixed

People

(Reporter: aosmond, Assigned: sotaro)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/17a61112-d7e4-409c-83ac-b8b090220717

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so mozilla::ClientWebGLContext::UpdateWebRenderCanvasData dom/canvas/ClientWebGLContext.cpp:471
1 libxul.so nsDisplayCanvas::CreateWebRenderCommands layout/generic/nsHTMLCanvasFrame.cpp:154
2 libxul.so mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1822
3 libxul.so mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:2085
4 libxul.so mozilla::nsDisplayTransform::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:6707
5 libxul.so mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1822
6 libxul.so mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:2085
7 libxul.so mozilla::nsDisplayOwnLayer::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:5270
8 libxul.so mozilla::nsDisplayFixedPosition::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:5476
9 libxul.so mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1822

Looks like mNotLost can be null

Flags: needinfo?(sotaro.ikeda.g)

Set release status flags based on info from the regressing bug 1763503

Assignee: nobody → sotaro.ikeda.g
Status: NEW → ASSIGNED
Attachment #9285979 - Attachment description: Bug 1779942 - Handle a case that mNotLost is nullptr in ClientWebGLContext::UpdateWebRenderCanvasData() → Bug 1779942 - Check IsContextLost() after DrawingBufferSize() call
Flags: needinfo?(sotaro.ikeda.g)
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a3b2601b8fea
Check IsContextLost() after DrawingBufferSize() call r=gfx-reviewers,jgilbert,lsalzman
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch

Please nominate this for ESR102 approval when you get a chance.

Flags: needinfo?(sotaro.ikeda.g)

Comment on attachment 9285979 [details]
Bug 1779942 - Check IsContextLost() after DrawingBufferSize() call

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Avoid crash during WebGL context lost.
  • User impact if declined: Crash could happen during WebGL context lost.
  • Fix Landed on Version: 104
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change just adds context lost check.
Flags: needinfo?(sotaro.ikeda.g)
Attachment #9285979 - Flags: approval-mozilla-esr102?

Comment on attachment 9285979 [details]
Bug 1779942 - Check IsContextLost() after DrawingBufferSize() call

Approved for 102.2esr.

Attachment #9285979 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: