Bug 1779942 - Check IsContextLost() after DrawingBufferSize() call. r=jgilbert,lsalzman a=RyanVM

ClientWebGLContext::DrawingBufferSize() could cause context lost. Then IsContextLost() check is added after the DrawingBufferSize() call.

Differential Revision: https://phabricator.services.mozilla.com/D152138